--- a/css/style.scss
+++ b/css/style.scss
@@ -46,6 +46,7 @@ p{
   height: 1200px;
   overflow: hidden;
   position: relative;
+  display: none;
 
   .content{
     width: 480px;
@@ -131,23 +132,33 @@ body.scene1-end{
   width: 100%;
   height: 3000px;
   z-index: 2;
-  color: lime;
+  color: red;
   
   .content{
-    width: 500px;
-    margin-left: 400px;
+    width: 600px; 
+    height: 700px;
+    overflow: hidden;
+    line-height: 2em;
+    margin-left: 350px;
+    background: rgba(0,255,160,0.3);
+    outline: 1px solid red;
+    -webkit-shape-inside: polygon(0px 0px, 485px 0px, 494.5px 85.5px, 482.25px 166.75px, 527.125px 310.375px, 504.0625px 402.6875px, 543.03125px 491.34375px, 490.515625px 601.671875px, 513.2578125px 675.8359375px, 409.62890625px 868.91796875px, -4px 870px, -0.283935546875px 722.720703125px, 54.43212890625px 659.44140625px, 137.8642578125px 657.8828125px, 180.728515625px 581.765625px, 102.45703125px 581.53125px, 77.9140625px 545.0625px, 106.828125px 468.125px, 64.65625px 406.25px, 88.3125px 342.5px, 47.625px 273px, 44.25px 220px, 10.5px 134px);
   }
   
-  .shape{
-    background: rgba(255,0,0,0.5);
-    -webkit-clip-path:  circle(50%, 50%, 50%);
-    -webkit-shape-outside: circle(50%, 50%, 50%);
+  /* hack to force first line to respect in shape-inside*/ 
+  .content p:before{
+    display: block;
+    clear: both;
+    content: "";
   }
   
   .cat1{
-    width: 200px;
-    height: 200px;
-    float: right;
+    width: 472px;
+    height: 534px;
+    background: rgba(0,0,250,0.5) url(../images/cat_falling1.png) top left no-repeat;
+    -webkit-transform-origin: left top;
+/*    -webkit-transform: scale(0.7);*/
+    float: left;
   }
   
   .cat2{
